--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,24 @@ Type: Package
 Title: What the package does (short line)
 Version: 1.0
 Date: 2014-12-12
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Author: Amy Li
+Maintainer: Amy Li <ajli@bu.edu>
+Description: ggheatmap is a tool that plots heatmaps tailored for
+    bioinformatics purposes using the ggplot2 package, it takes an
+    ExpressionSet object (Biobase) as the basic input
+URL: https://github.com/lia978/ggheatmap
+Depends:
+    R (>= 2.11.0)
+Imports:
+    Biobase,
+    ggplot2,
+    reshape2,
+    ggdendro,
+    grid,
+    gridExtra,
+    gtable,
+    RColorBrewer,
+    scales,
+    stats
+License: Boston University
+LazyData: true
